--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav class="top-line">
+        <div class="container">
+            <ul class="top">
+                <li class="nav-item">Доставка</li>
+                <li class="nav-item">Оплата</li>
+                <li class="nav-item">Отзывы</li>
+                <li class="nav-item">Вопрос - ответ</li>
+                <li class="nav-item">Контакты</li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
