--- a/index.html
+++ b/index.html
@@ -13,13 +13,38 @@
     <nav class="top-line">
         <div class="container">
             <ul class="top">
-                <li class="nav-item">Доставка</li>
-                <li class="nav-item">Оплата</li>
-                <li class="nav-item">Отзывы</li>
-                <li class="nav-item">Вопрос - ответ</li>
-                <li class="nav-item">Контакты</li>
+                <li class="nav-item">
+                    <a href="#" class="link">Доставка</a>
+                </li><!--
+             --><li class="nav-item">
+                    <a href="#" class="link">Оплата</a>
+                </li><!--
+             --><li class="nav-item">
+                    <a href="#" class="link">Отзывы</a>
+                </li><!--
+             --><li class="nav-item">
+                    <a href="#" class="link">Вопрос - ответ</a>
+                </li><!--
+             --><li class="nav-item">
+                    <a href="#" class="link">Контакты</a>
+                </li>
             </ul>
         </div>
     </nav>
+    <header class="header">
+        <div class="container">
+            <a href="#" class="logo-link">
+                <div class="logo">
+                    <img src="images/logo.png" alt="Logo">
+                </div>
+                <h1 class="beauty">Beauty</h1>
+            </a>
+            <div class="right-header">
+                <a href="#" class="phone">8 (812) 123-45-67</a>
+                <button class="button">Обратный звонок</button>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </header>
 </body>
 </html>
