--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </nav>
     <header class="header">
         <div class="container">
-            <a href="#" class="logo-link">
+            <a href="#">
                 <div class="logo">
                     <img src="images/logo.png" alt="Logo">
                 </div>
@@ -46,5 +46,18 @@
             <div class="clearfix"></div>
         </div>
     </header>
+    <div class="services">
+        <div class="container">
+            <div class="menu">
+                <a href="#" class="menu-link">Парикмахерская</a>
+                <a href="#" class="menu-link">Барбершоп</a>
+                <a href="#" class="menu-link">Маникюр</a>
+                <a href="#" class="menu-link">Педикюр</a>
+                <a href="#" class="menu-link">Массаж</a>
+                <a href="#" class="menu-link last">Мебель</a>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
