--- a/index.html
+++ b/index.html
@@ -59,5 +59,12 @@
             </div>
         </div>
     </div>
+    <div class="sale">
+        <div class="container">
+            <h2 class="sale-title">Супер кресло</h2>
+            <p class="sale-text">Текст акции всегда отражает суть, а не просто болтовню, поэтому внимательнее</p>
+            <a href="#" class="sale-link"><div class="link-word">Подробнее</div></a>
+        </div>
+    </div>
 </body>
 </html>
