--- a/index.html
+++ b/index.html
@@ -66,5 +66,37 @@
             <a href="#" class="sale-link"><div class="link-word">Подробнее</div></a>
         </div>
     </div>
+    <div class="cards">
+        <div class="container">
+            <h3 class="card-title">Специальные предложения</h3>
+            <div>
+                <div class="card">
+                    <img class="card-image" src="images/icon.png" alt="icon">
+                    <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
+                    <div class="price">9 900 ₽</div>
+                    <a href="#" class="buy">Купить</a>
+                </div>
+                <div class="card">
+                    <img class="card-image" src="images/icon.png" alt="icon">
+                    <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
+                    <div class="price">9 900 ₽</div>
+                    <a href="#" class="buy">Купить</a>
+                </div>
+                <div class="card">
+                    <img class="card-image" src="images/icon.png" alt="icon">
+                    <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
+                    <div class="price">9 900 ₽</div>
+                    <a href="#" class="buy">Купить</a>
+                </div>
+                <div class="card">
+                    <img class="card-image" src="images/icon.png" alt="icon">
+                    <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
+                    <div class="price">9 900 ₽</div>
+                    <a href="#" class="buy">Купить</a>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
 </body>
 </html>
