--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                 <div class="logo">
                     <img src="images/logo.png" alt="Logo">
                 </div>
-                <h1 class="beauty">Beauty</h1>
             </a>
             <div class="right-header">
                 <a href="#" class="phone">8 (812) 123-45-67</a>
@@ -48,52 +47,62 @@
     </header>
     <div class="services">
         <div class="container">
-            <div class="menu">
-                <a href="#" class="menu-link">Парикмахерская</a>
-                <a href="#" class="menu-link">Барбершоп</a>
-                <a href="#" class="menu-link">Маникюр</a>
-                <a href="#" class="menu-link">Педикюр</a>
-                <a href="#" class="menu-link">Массаж</a>
-                <a href="#" class="menu-link last">Мебель</a>
-                <div class="clearfix"></div>
-            </div>
+                <ul class="menu">
+                    <li>
+                        <a href="#" class="menu-link">Парикмахерская</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-link">Барбершоп</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-link">Маникюр</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-link">Педикюр</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-link">Массаж</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-link last">Мебель</a>
+                    </li>
+                    <div class="clearfix"></div>
+                </ul>
         </div>
     </div>
     <div class="sale">
         <div class="container">
             <h2 class="sale-title">Супер кресло</h2>
             <p class="sale-text">Текст акции всегда отражает суть, а не просто болтовню, поэтому внимательнее</p>
-            <a href="#" class="sale-link"><div class="link-word">Подробнее</div></a>
+            <a href="#" class="button sale-link"><div class="link-word">Подробнее</div></a>
         </div>
     </div>
     <div class="cards">
         <div class="container">
             <h3 class="card-title">Специальные предложения</h3>
-            <div>
                 <div class="card">
                     <img class="card-image" src="images/icon.png" alt="icon">
                     <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
                     <div class="price">9 900 ₽</div>
-                    <a href="#" class="buy">Купить</a>
+                    <a href="#" class="button buy">Купить</a>
                 </div>
                 <div class="card">
                     <img class="card-image" src="images/icon.png" alt="icon">
                     <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
                     <div class="price">9 900 ₽</div>
-                    <a href="#" class="buy">Купить</a>
+                    <a href="#" class="button buy">Купить</a>
                 </div>
                 <div class="card">
                     <img class="card-image" src="images/icon.png" alt="icon">
                     <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
                     <div class="price">9 900 ₽</div>
-                    <a href="#" class="buy">Купить</a>
+                    <a href="#" class="button buy">Купить</a>
                 </div>
                 <div class="card">
                     <img class="card-image" src="images/icon.png" alt="icon">
                     <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
                     <div class="price">9 900 ₽</div>
-                    <a href="#" class="buy">Купить</a>
-                </div>
+                    <a href="#" class="button buy">Купить</a>
             </div>
             <div class="clearfix"></div>
         </div>
