--- a/index.html
+++ b/index.html
@@ -72,39 +72,61 @@
     </div>
     <div class="sale">
         <div class="container">
-            <h2 class="sale-title">Супер кресло</h2>
+            <h1 class="sale-title">Супер кресло</h1>
             <p class="sale-text">Текст акции всегда отражает суть, а не просто болтовню, поэтому внимательнее</p>
             <a href="#" class="button sale-link"><div class="link-word">Подробнее</div></a>
         </div>
     </div>
-    <div class="cards">
-        <div class="container">
-            <h3 class="card-title">Специальные предложения</h3>
-                <div class="card">
-                    <img class="card-image" src="images/icon.png" alt="icon">
-                    <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
-                    <div class="price">9 900 ₽</div>
-                    <a href="#" class="button buy">Купить</a>
+    <div class="main-section">
+        <div class="cards">
+            <div class="container">
+                <h2 class="card-title">Специальные предложения</h2>
+                    <div class="card">
+                        <img class="card-image" src="images/icon.png" alt="icon">
+                        <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
+                        <div class="price">9 900 ₽</div>
+                        <a href="#" class="button buy">Купить</a>
+                    </div>
+                    <div class="card">
+                        <img class="card-image" src="images/icon.png" alt="icon">
+                        <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
+                        <div class="price">9 900 ₽</div>
+                        <a href="#" class="button buy">Купить</a>
+                    </div>
+                    <div class="card">
+                        <img class="card-image" src="images/icon.png" alt="icon">
+                        <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
+                        <div class="price">9 900 ₽</div>
+                        <a href="#" class="button buy">Купить</a>
+                    </div>
+                    <div class="card">
+                        <img class="card-image" src="images/icon.png" alt="icon">
+                        <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
+                        <div class="price">9 900 ₽</div>
+                        <a href="#" class="button buy">Купить</a>
                 </div>
-                <div class="card">
-                    <img class="card-image" src="images/icon.png" alt="icon">
-                    <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
-                    <div class="price">9 900 ₽</div>
-                    <a href="#" class="button buy">Купить</a>
-                </div>
-                <div class="card">
-                    <img class="card-image" src="images/icon.png" alt="icon">
-                    <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
-                    <div class="price">9 900 ₽</div>
-                    <a href="#" class="button buy">Купить</a>
-                </div>
-                <div class="card">
-                    <img class="card-image" src="images/icon.png" alt="icon">
-                    <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
-                    <div class="price">9 900 ₽</div>
-                    <a href="#" class="button buy">Купить</a>
+                <div class="clearfix"></div>
             </div>
-            <div class="clearfix"></div>
+        </div>
+        <div class="two-cards">
+            <div class="container">
+                <div class="card-bonus">
+                    <div class="card-bonus_left-part">
+                        <h3 class="card-bonus_title">Получайте бонусы и подарки</h3>
+                        <p class="card-bonus_text">Каждый месяц разыгрываем<br>10 000 рублей для наших клиентов</p>
+                        <input type="mail" placeholder="Введите e-mail" class="input">
+                    </div><!--
+                 --><img class="envelope" src="images/envelope.png" alt="Icon">
+                </div><!--
+             --><div class="card-bonus right">
+                    <div class="card-bonus_left-part right-card">
+                        <h3 class="card-bonus_title">Заходите к нам</h3>
+                        <p class="card-bonus_text right-card">Более 300 магазинов<br>по всей России</p>
+                        <a href="#" class="button sale-link map">Карта магазинов</a>
+                    </div><!--
+                 --><img class="truck" src="images/truck.png" alt="Icon">
+                </div>
+            </div>
         </div>
     </div>
 </body>
