--- a/index.html
+++ b/index.html
@@ -128,6 +128,53 @@
                 </div>
             </div>
         </div>
+        <div class="logo-section">
+            <div class="container">
+                <a href="#" class="logo-section_link"><img src="images/impuls.png" alt="impuls"></a>
+                <a href="#" class="logo-section_link"><img src="images/impuls.png" alt="impuls"></a>
+                <a href="#" class="logo-section_link"><img src="images/impuls.png" alt="impuls"></a>
+                <a href="#" class="logo-section_link"><img src="images/impuls.png" alt="impuls"></a>
+                <a href="#" class="logo-section_link"><img src="images/impuls.png" alt="impuls"></a>
+                <a href="#" class="logo-section_link"><img src="images/impuls.png" alt="impuls"></a>
+                <a href="#" class="logo-section_link"><img src="images/impuls.png" alt="impuls"></a>
+                <a href="#" class="logo-section_link"><img src="images/impuls.png" alt="impuls"></a>
+                <a href="#" class="logo-section_link"><img src="images/impuls.png" alt="impuls"></a>
+                <a href="#" class="logo-section_link"><img src="images/impuls.png" alt="impuls"></a>
+                <a href="#" class="logo-section_link"><img src="images/impuls.png" alt="impuls"></a>
+                <a href="#" class="logo-section_link"><img src="images/impuls.png" alt="impuls"></a>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+        <div class="cards looked">
+            <div class="container">
+                <h2 class="card-title">Вы недавно смотрели</h2>
+                    <div class="card">
+                        <img class="card-image" src="images/icon.png" alt="icon">
+                        <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
+                        <div class="price">9 900 ₽</div>
+                        <a href="#" class="button buy">Купить</a>
+                    </div>
+                    <div class="card">
+                        <img class="card-image" src="images/icon.png" alt="icon">
+                        <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
+                        <div class="price">9 900 ₽</div>
+                        <a href="#" class="button buy">Купить</a>
+                    </div>
+                    <div class="card">
+                        <img class="card-image" src="images/icon.png" alt="icon">
+                        <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
+                        <div class="price">9 900 ₽</div>
+                        <a href="#" class="button buy">Купить</a>
+                    </div>
+                    <div class="card">
+                        <img class="card-image" src="images/icon.png" alt="icon">
+                        <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
+                        <div class="price">9 900 ₽</div>
+                        <a href="#" class="button buy">Купить</a>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
