--- a/index.html
+++ b/index.html
@@ -176,5 +176,74 @@
             </div>
         </div>
     </div>
+    <div class="category-section">
+        <div class="container">
+            <div class="category">
+                <h4 class="category-title">Популярные<br>категории</h4>
+                <ul>
+                    <li><a class="category-item" href="#">Насадки</a></li>
+                    <li><a class="category-item" href="#">Инструменты</a></li>
+                    <li><a class="category-item" href="#">Гель-лаки</a></li>
+                    <li><a class="category-item" href="#">Дизайн</a></li>
+                    <li><a class="category-item" href="#">Наращивание</a></li>
+                    <li><a class="category-item" href="#">Оборудование</a></li>
+                </ul>
+            </div>
+            <div class="category">
+                <h4 class="category-title">Популярные<br>категории</h4>
+                <ul>
+                    <li><a class="category-item" href="#">Насадки</a></li>
+                    <li><a class="category-item" href="#">Инструменты</a></li>
+                    <li><a class="category-item" href="#">Гель-лаки</a></li>
+                    <li><a class="category-item" href="#">Дизайн</a></li>
+                    <li><a class="category-item" href="#">Наращивание</a></li>
+                    <li><a class="category-item" href="#">Оборудование</a></li>
+                </ul>
+            </div>
+            <div class="category">
+                <h4 class="category-title">Популярные<br>категории</h4>
+                <ul>
+                    <li><a class="category-item" href="#">Насадки</a></li>
+                    <li><a class="category-item" href="#">Инструменты</a></li>
+                    <li><a class="category-item" href="#">Гель-лаки</a></li>
+                    <li><a class="category-item" href="#">Дизайн</a></li>
+                    <li><a class="category-item" href="#">Наращивание</a></li>
+                    <li><a class="category-item" href="#">Оборудование</a></li>
+                </ul>
+            </div>
+            <div class="category">
+                <h4 class="category-title">Популярные<br>категории</h4>
+                <ul>
+                    <li><a class="category-item" href="#">Насадки</a></li>
+                    <li><a class="category-item" href="#">Инструменты</a></li>
+                    <li><a class="category-item" href="#">Гель-лаки</a></li>
+                    <li><a class="category-item" href="#">Дизайн</a></li>
+                    <li><a class="category-item" href="#">Наращивание</a></li>
+                    <li><a class="category-item" href="#">Оборудование</a></li>
+                </ul>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+    <div class="contacts">
+        <div class="container">
+            <a href="#" class="social"><img src="images/youtube.png" alt="youtube" height="45px" width="45px"></a>
+            <a href="#" class="social"><img src="images/vk.png" alt="vk" height="45px" width="45px"></a>
+            <a href="#" class="social"><img src="images/facebook.png" alt="facebook" height="45px" width="45px"></a>
+            <a href="#" class="social"><img src="images/instagram.png" alt="instagram" height="45px" width="45px"></a>
+            <div class="right-header">
+                <a href="#" class="phone bottom">8 (812) 123-45-67</a>
+                <button class="button network">Обратный звонок</button>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-left">Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования для салонов красоты</div>
+            <div class="footer-right">Политика конфиденциальности</div>
+            <div class="clearfix"></div>
+        </div>
+    </footer>
 </body>
 </html>
