--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <a href="#" class="button sale-link"><div class="link-word">Подробнее</div></a>
         </div>
     </div>
-    <div class="main-section">
+    <main class="main-section">
         <div class="cards">
             <div class="container">
                 <h2 class="card-title">Специальные предложения</h2>
@@ -175,7 +175,7 @@
                 <div class="clearfix"></div>
             </div>
         </div>
-    </div>
+    </main>
     <div class="category-section">
         <div class="container">
             <div class="category">
@@ -241,7 +241,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-left">Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования для салонов красоты</div>
-            <div class="footer-right">Политика конфиденциальности</div>
+            <div class="footer-right"><a class="footer-link" href="#">Политика конфиденциальности</a></div>
             <div class="clearfix"></div>
         </div>
     </footer>
