--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -45,8 +45,9 @@
             <div class="clearfix"></div>
         </div>
     </header>
-    <div class="services">
-        <div class="container">
+    <main class="main-section">
+        <div class="services">
+            <div class="container">
                 <ul class="menu">
                     <li>
                         <a href="#" class="menu-link">Парикмахерская</a>
@@ -66,65 +67,65 @@
                     <li>
                         <a href="#" class="menu-link last">Мебель</a>
                     </li>
-                    <div class="clearfix"></div>
+                    
                 </ul>
+                <div class="clearfix"></div>
+            </div>
         </div>
-    </div>
-    <div class="sale">
-        <div class="container">
-            <h1 class="sale-title">Супер кресло</h1>
-            <p class="sale-text">Текст акции всегда отражает суть, а не просто болтовню, поэтому внимательнее</p>
-            <a href="#" class="button sale-link"><div class="link-word">Подробнее</div></a>
+        <div class="sale">
+            <div class="container">
+                <h1 class="sale-title">Супер кресло</h1>
+                <p class="sale-text">Текст акции всегда отражает суть, а не просто болтовню, поэтому внимательнее</p>
+                <a href="#" class="button sale-link"><span class="link-word">Подробнее</span></a>
+            </div>
         </div>
-    </div>
-    <main class="main-section">
         <div class="cards">
             <div class="container">
                 <h2 class="card-title">Специальные предложения</h2>
-                    <div class="card">
-                        <img class="card-image" src="images/icon.png" alt="icon">
-                        <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
-                        <div class="price">9 900 ₽</div>
-                        <a href="#" class="button buy">Купить</a>
-                    </div>
-                    <div class="card">
-                        <img class="card-image" src="images/icon.png" alt="icon">
-                        <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
-                        <div class="price">9 900 ₽</div>
-                        <a href="#" class="button buy">Купить</a>
-                    </div>
-                    <div class="card">
-                        <img class="card-image" src="images/icon.png" alt="icon">
-                        <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
-                        <div class="price">9 900 ₽</div>
-                        <a href="#" class="button buy">Купить</a>
-                    </div>
-                    <div class="card">
-                        <img class="card-image" src="images/icon.png" alt="icon">
-                        <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
-                        <div class="price">9 900 ₽</div>
-                        <a href="#" class="button buy">Купить</a>
+                <div class="card">
+                    <img class="card-image" src="images/icon.png" alt="Парикмахерское кресло «Норм» гидравлическое">
+                    <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
+                    <p class="price">9 900 ₽</p>
+                    <a href="#" class="button buy">Купить</a>
+                </div>
+                <div class="card">
+                    <img class="card-image" src="images/icon.png" alt="icon">
+                    <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
+                    <p class="price">9 900 ₽</p>
+                    <a href="#" class="button buy">Купить</a>
+                </div>
+                <div class="card">
+                    <img class="card-image" src="images/icon.png" alt="icon">
+                    <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
+                    <p class="price">9 900 ₽</p>
+                    <a href="#" class="button buy">Купить</a>
+                </div>
+                <div class="card">
+                    <img class="card-image" src="images/icon.png" alt="icon">
+                    <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
+                    <p class="price">9 900 ₽</p>
+                    <a href="#" class="button buy">Купить</a>
                 </div>
                 <div class="clearfix"></div>
             </div>
         </div>
-        <div class="two-cards">
+        <div class="main-cards">
             <div class="container">
                 <div class="card-bonus">
                     <div class="card-bonus_left-part">
                         <h3 class="card-bonus_title">Получайте бонусы и подарки</h3>
-                        <p class="card-bonus_text">Каждый месяц разыгрываем<br>10 000 рублей для наших клиентов</p>
-                        <input type="mail" placeholder="Введите e-mail" class="input">
+                        <p class="card-bonus_text">Каждый месяц разыгрываем 10 000 рублей для наших клиентов</p>
+                        <input type="email" placeholder="Введите e-mail" class="input">
                     </div><!--
-                 --><img class="envelope" src="images/envelope.png" alt="Icon">
+                --><img class="envelope" src="images/envelope.png" alt="Icon">
                 </div><!--
-             --><div class="card-bonus right">
+            --><div class="card-bonus right">
                     <div class="card-bonus_left-part right-card">
                         <h3 class="card-bonus_title">Заходите к нам</h3>
-                        <p class="card-bonus_text right-card">Более 300 магазинов<br>по всей России</p>
+                        <p class="card-bonus_text right-card">Более 300 магазинов по всей России</p>
                         <a href="#" class="button sale-link map">Карта магазинов</a>
                     </div><!--
-                 --><img class="truck" src="images/truck.png" alt="Icon">
+                --><img class="truck" src="images/truck.png" alt="Icon">
                 </div>
             </div>
         </div>
@@ -151,96 +152,96 @@
                     <div class="card">
                         <img class="card-image" src="images/icon.png" alt="icon">
                         <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
-                        <div class="price">9 900 ₽</div>
+                        <p class="price">9 900 ₽</p>
                         <a href="#" class="button buy">Купить</a>
                     </div>
                     <div class="card">
                         <img class="card-image" src="images/icon.png" alt="icon">
                         <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
-                        <div class="price">9 900 ₽</div>
+                        <p class="price">9 900 ₽</p>
                         <a href="#" class="button buy">Купить</a>
                     </div>
                     <div class="card">
                         <img class="card-image" src="images/icon.png" alt="icon">
                         <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
-                        <div class="price">9 900 ₽</div>
+                        <p class="price">9 900 ₽</p>
                         <a href="#" class="button buy">Купить</a>
                     </div>
                     <div class="card">
                         <img class="card-image" src="images/icon.png" alt="icon">
                         <p class="card-text">Парикмахерское кресло «Норм» гидравлическое</p>
-                        <div class="price">9 900 ₽</div>
+                        <p class="price">9 900 ₽</p>
                         <a href="#" class="button buy">Купить</a>
                 </div>
                 <div class="clearfix"></div>
             </div>
         </div>
+        <div class="category-section">
+            <div class="container">
+                <div class="category">
+                    <h4 class="category-title">Популярные<br>категории</h4>
+                    <ul>
+                        <li><a class="category-item" href="#">Насадки</a></li>
+                        <li><a class="category-item" href="#">Инструменты</a></li>
+                        <li><a class="category-item" href="#">Гель-лаки</a></li>
+                        <li><a class="category-item" href="#">Дизайн</a></li>
+                        <li><a class="category-item" href="#">Наращивание</a></li>
+                        <li><a class="category-item" href="#">Оборудование</a></li>
+                    </ul>
+                </div>
+                <div class="category">
+                    <h4 class="category-title">Популярные<br>категории</h4>
+                    <ul>
+                        <li><a class="category-item" href="#">Насадки</a></li>
+                        <li><a class="category-item" href="#">Инструменты</a></li>
+                        <li><a class="category-item" href="#">Гель-лаки</a></li>
+                        <li><a class="category-item" href="#">Дизайн</a></li>
+                        <li><a class="category-item" href="#">Наращивание</a></li>
+                        <li><a class="category-item" href="#">Оборудование</a></li>
+                    </ul>
+                </div>
+                <div class="category">
+                    <h4 class="category-title">Популярные<br>категории</h4>
+                    <ul>
+                        <li><a class="category-item" href="#">Насадки</a></li>
+                        <li><a class="category-item" href="#">Инструменты</a></li>
+                        <li><a class="category-item" href="#">Гель-лаки</a></li>
+                        <li><a class="category-item" href="#">Дизайн</a></li>
+                        <li><a class="category-item" href="#">Наращивание</a></li>
+                        <li><a class="category-item" href="#">Оборудование</a></li>
+                    </ul>
+                </div>
+                <div class="category">
+                    <h4 class="category-title">Популярные<br>категории</h4>
+                    <ul>
+                        <li><a class="category-item" href="#">Насадки</a></li>
+                        <li><a class="category-item" href="#">Инструменты</a></li>
+                        <li><a class="category-item" href="#">Гель-лаки</a></li>
+                        <li><a class="category-item" href="#">Дизайн</a></li>
+                        <li><a class="category-item" href="#">Наращивание</a></li>
+                        <li><a class="category-item" href="#">Оборудование</a></li>
+                    </ul>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+        <div class="contacts">
+            <div class="container">
+                <a href="#" class="social youtube"></a>
+                <a href="#" class="social vk"></a>
+                <a href="#" class="social facebook"></a>
+                <a href="#" class="social instagram"></a>
+                <div class="right-header">
+                    <a href="tel:88121234567" class="phone bottom">8 (812) 123-45-67</a>
+                    <button class="button network">Обратный звонок</button>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
     </main>
-    <div class="category-section">
-        <div class="container">
-            <div class="category">
-                <h4 class="category-title">Популярные<br>категории</h4>
-                <ul>
-                    <li><a class="category-item" href="#">Насадки</a></li>
-                    <li><a class="category-item" href="#">Инструменты</a></li>
-                    <li><a class="category-item" href="#">Гель-лаки</a></li>
-                    <li><a class="category-item" href="#">Дизайн</a></li>
-                    <li><a class="category-item" href="#">Наращивание</a></li>
-                    <li><a class="category-item" href="#">Оборудование</a></li>
-                </ul>
-            </div>
-            <div class="category">
-                <h4 class="category-title">Популярные<br>категории</h4>
-                <ul>
-                    <li><a class="category-item" href="#">Насадки</a></li>
-                    <li><a class="category-item" href="#">Инструменты</a></li>
-                    <li><a class="category-item" href="#">Гель-лаки</a></li>
-                    <li><a class="category-item" href="#">Дизайн</a></li>
-                    <li><a class="category-item" href="#">Наращивание</a></li>
-                    <li><a class="category-item" href="#">Оборудование</a></li>
-                </ul>
-            </div>
-            <div class="category">
-                <h4 class="category-title">Популярные<br>категории</h4>
-                <ul>
-                    <li><a class="category-item" href="#">Насадки</a></li>
-                    <li><a class="category-item" href="#">Инструменты</a></li>
-                    <li><a class="category-item" href="#">Гель-лаки</a></li>
-                    <li><a class="category-item" href="#">Дизайн</a></li>
-                    <li><a class="category-item" href="#">Наращивание</a></li>
-                    <li><a class="category-item" href="#">Оборудование</a></li>
-                </ul>
-            </div>
-            <div class="category">
-                <h4 class="category-title">Популярные<br>категории</h4>
-                <ul>
-                    <li><a class="category-item" href="#">Насадки</a></li>
-                    <li><a class="category-item" href="#">Инструменты</a></li>
-                    <li><a class="category-item" href="#">Гель-лаки</a></li>
-                    <li><a class="category-item" href="#">Дизайн</a></li>
-                    <li><a class="category-item" href="#">Наращивание</a></li>
-                    <li><a class="category-item" href="#">Оборудование</a></li>
-                </ul>
-            </div>
-            <div class="clearfix"></div>
-        </div>
-    </div>
-    <div class="contacts">
-        <div class="container">
-            <a href="#" class="social"><img src="images/youtube.png" alt="youtube" height="45px" width="45px"></a>
-            <a href="#" class="social"><img src="images/vk.png" alt="vk" height="45px" width="45px"></a>
-            <a href="#" class="social"><img src="images/facebook.png" alt="facebook" height="45px" width="45px"></a>
-            <a href="#" class="social"><img src="images/instagram.png" alt="instagram" height="45px" width="45px"></a>
-            <div class="right-header">
-                <a href="#" class="phone bottom">8 (812) 123-45-67</a>
-                <button class="button network">Обратный звонок</button>
-            </div>
-            <div class="clearfix"></div>
-        </div>
-    </div>
     <footer class="footer">
         <div class="container">
-            <div class="footer-left">Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования для салонов красоты</div>
+            <p class="footer-left">Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования для салонов красоты</p>
             <div class="footer-right"><a class="footer-link" href="#">Политика конфиденциальности</a></div>
             <div class="clearfix"></div>
         </div>
